force-app/main/default/objects/Outage_Contact_Info__c/Outage_Contact_Info__c.object-meta.xml
<CustomObject>
    <description>This object will store account and outage contact information including counts for use in reporting.</description>
    <label>Outage_ID</label>
    <nameField>
        <label>Outage ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outage_Contact_Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>