force-app/main/default/objects/Outage_Contact_Info__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Account which is displayed in the contact list in the wizard.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Outage_Contact_Infos</relationshipLabel>
    <relationshipName>Outage_Contact_Infos</relationshipName>
    <type>Lookup</type>
</CustomField>