force-app/main/default/objects/Outage_Contact_Info__c/fields/AutoNumber__c.field-meta.xml
<CustomField>
    <fullName>AutoNumber__c</fullName>
    <description>Used for Pagination in OutageContactWizardController</description>
    <label>AutoNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>