force-app/main/default/objects/Outage_Contact_Info__c/fields/Aux_Id__c.field-meta.xml
<CustomField>
    <fullName>Aux_Id__c</fullName>
    <label>Aux Id</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>