force-app/main/default/objects/Outage_Contact_Info__c/fields/Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Company_Id__c</fullName>
    <label>Company Id</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>