force-app/main/default/objects/Outage_Contact_Info__c/fields/Connection_Type__c.field-meta.xml
<CustomField>
    <fullName>Connection_Type__c</fullName>
    <label>Connection Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>