force-app/main/default/objects/Outage_Contact_Info__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>R00N50000001tUXDEA2</relationshipName>
    <type>Lookup</type>
</CustomField>