force-app/main/default/objects/Outage_Contact_Info__c/fields/Cust_Id__c.field-meta.xml
<CustomField>
    <fullName>Cust_Id__c</fullName>
    <label>Cust Id</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>