force-app/main/default/objects/Outage_Contact_Info__c/fields/IsProcessedRecord__c.field-meta.xml
<CustomField>
    <fullName>IsProcessedRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field is used to distinguish between the records created by the same user</description>
    <label>IsProcessedRecord</label>
    <type>Checkbox</type>
</CustomField>