force-app/main/default/objects/Outage_Contact_Info__c/fields/NMC_Account_del__c.field-meta.xml
<CustomField>
    <fullName>NMC_Account_del__c</fullName>
    <label>NMC Account</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>