force-app/main/default/objects/Outage_Contact_Info__c/fields/NMC_System__c.field-meta.xml
<CustomField>
    <fullName>NMC_System__c</fullName>
    <label>NMC System</label>
    <length>100</length>
    <type>Text</type>
</CustomField>