force-app/main/default/objects/Outage_Contact_Info__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <description>&apos;Hardware&apos; or &apos;Portal/Services&apos;;</description>
    <inlineHelpText>&apos;Hardware&apos; or &apos;Portal/Services&apos;;</inlineHelpText>
    <label>Report Type</label>
    <type>TextArea</type>
</CustomField>