force-app/main/default/objects/Outage_Contact_Info__c/fields/SendEmail__c.field-meta.xml
<CustomField>
    <fullName>SendEmail__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field stores whether the email should be sent to the Contact or not.</description>
    <label>SendEmail</label>
    <type>Checkbox</type>
</CustomField>