force-app/main/default/objects/Outage_Contact_Info__c/fields/SendLater__c.field-meta.xml
<CustomField>
    <fullName>SendLater__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field determines whether email should be sent at a later time</description>
    <label>SendLater</label>
    <type>Checkbox</type>
</CustomField>