force-app/main/default/objects/Outage_Contact_Info__c/fields/User_Contact_Type_Selections__c.field-meta.xml
<CustomField>
    <fullName>User_Contact_Type_Selections__c</fullName>
    <description>The contact types that the user selected in the wizard will be stored in this field.</description>
    <inlineHelpText>The contact types that the user selected in the wizard will be stored in this field.</inlineHelpText>
    <label>User Contact Type Selections</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>