force-app/main/default/objects/Outage_Contact_Info__c/fields/User_custom_search_selection__c.field-meta.xml
<CustomField>
    <fullName>User_custom_search_selection__c</fullName>
    <label>User custom search selection</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>