force-app/main/default/objects/Outage_Contact_Info__c/fields/User_Hardware_or_Services_Selections__c.field-meta.xml
<CustomField>
    <fullName>User_Hardware_or_Services_Selections__c</fullName>
    <description>The hardware or portal/services that the user selected in the OCT wizard.</description>
    <inlineHelpText>The hardware or portal/services that the user selected in the OCT wizard.</inlineHelpText>
    <label>User Hardware or Services Selections</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>