force-app/main/default/objects/Outage_Contact_Info__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>AutoNumber__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Item_Type__c</columns>
    <columns>Report_Type__c</columns>
    <columns>User_Hardware_or_Services_Selections__c</columns>
    <columns>User_Contact_Type_Selections__c</columns>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>9/1/2011 12:00 AM</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>